--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4,h5, h6{
   font-family: "Nexa-Bold";
   color: var(--dark-blue);
   line-height: 2rem;
-  letter-spacing: .1rem;
+  letter-spacing: .05rem;
 }
 h1{
 font-size: 2rem;
@@ -120,9 +120,6 @@ letter-spacing: 0.05rem;
   p{
     font-size: 1rem;
   }
-  li{
-    font-size: 1rem;
-  }
   input{
     font-family: "Nexa-Light";
     font-size: 0.8rem;
@@ -158,22 +155,20 @@ letter-spacing: 0.05rem;
   }
   h1{
     font-size: 2.3rem;
-    padding: 1rem;
   }
   h2{
     font-size: 2.1rem;
-    padding: 1rem;
   }
   h3{
     font-size: 1.3rem;
-    padding: 1rem;
   }
   p{
-    font-size: 1rem;
-    padding: .5rem;
+    font-size: .9rem;
+    letter-spacing: .03rem;
+    font-weight: 900;
   }
   li{
-    font-size: 1rem;
+    font-size: .8rem;
   }
   input{
     font-family: "Nexa-Light";
@@ -194,8 +189,6 @@ letter-spacing: 0.05rem;
       border: none;
       font-size: .8rem;
       letter-spacing: .1rem;
-      border-radius: 0%;
-      padding: inherit;
       }
       .primary{
       background-color: var(--dark-blue);
