--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,7 +13,7 @@
             <div class="nav-desktop">
                 <div class="desktop-nav">          
                     <ul>                        
-                        <li>Doctor</li>
+                        <li>Doctors</li>
                         <li>Hospitals</li>
                         <li>Treatment</li>
                         <li>Other Services</li>
@@ -41,7 +41,7 @@
                     <input type="text" name="location" id="location" placeholder="Ahmedabad"/>
                 </div>
                 <div class="search1">
-                    <input  type="text" placeholder="Search for doctors,hospitals and treatments.">
+                    <input  type="text" placeholder="Search for doctors,hospitals and treatments">
                 </div> 
                 <div class="button1">
                     <button class="primary">Search</button>
@@ -59,9 +59,8 @@
                 </p>
             </div>           
             <div class="steps">
-                <a class="toggle-btn Stp1">
-                    <p >01</p>
-                    <p >Fix Consultation</p>
+                <a class="toggle-btn2 Stp1 bordr">
+                    <p class="num">01 <span class="det">Fix Consultation</span> </p>
                 </a>
                 
                 <div class="FC-use">
@@ -82,10 +81,12 @@
                     <p >04  Fix surgery</p>
                 </a>
                 <a class="toggle-btn2 Stp5">
-                    <p >05  Upload Medical Reports</p>
+                    <p class="mob-tab">05  Upload Medical Reports</p>
+                    <p class="desktop">05  Hospital sent estimates</p>
                 </a>
                 <a class="toggle-btn2 Stp6">
-                    <p >06  Hospital sent estimates</p>
+                    <p class="mob-tab">06  Hospital sent estimates</p>
+                    <p class="desktop">06  Payment</p>
                 </a>
                 <a class="toggle-btn2 Stp7">
                     <p >07  Surgery Completed</p>
@@ -105,7 +106,7 @@
                 </p>
             </div>
             <div class="doctor-profile">
-                <div class="doc-details">
+                <div class="doc-details mob-tab">
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--002.jpg" alt="">
                     <h5 class="name">Duke Sanson</h5>
                     <ul>
@@ -114,31 +115,67 @@
                         <li>Australia</li>
                     </ul>
                 </div>
-                <div class="doc-details">
-                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--004.jpg" alt="">
-                    <h5 class="name">Georgia Peter</h5>
+                <div class="doc-details desktop">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--002.jpg" alt="">
+                    <h5 class="name">Charlie Moon</h5>
                     <ul>
-                        <li>Breast Cancer Surgeon</li>
-                        <li>Director . UT . Southwest</li>
+                        <li>Cardiac Surgeon</li>
+                        <li>MBBS, MD, FRCP, MRCP, Fellowship</li>
+                        <li>New Delhi, India</li>
+                    </ul>
+                </div>
+                <div class="doc-details mob-tab">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--004.jpg" alt="">
+                    <h5 class="name">Georgia Peter</h5>
+                    <ul>
+                        <li>Breast Cancer surgeon</li>
+                        <li>Director, UT Southwest</li>
                         <li>London</li>
                     </ul>
                 </div>
-                <div class="doc-details">
+                <div class="doc-details desktop">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--003.jpg" alt="">
+                    <h5 class="name">Charlie Moon</h5>
+                    <ul>
+                        <li>Cardiac Surgeon</li>
+                        <li>MBBS, MD, FRCP, MRCP, Fellowship</li>
+                        <li>New Delhi, India</li>
+                    </ul>
+                </div>
+                <div class="doc-details mob-tab">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--005.jpg" alt="">
+                    <h5 class="name">Rose Moon</h5>
+                    <ul>
+                        <li>Cardiac Surgeon</li>
+                        <li>MBBS, MD, FRCP, MRCP, Fellowship</li>
+                        <li>New Delhi, India</li>
+                    </ul>
+                </div>
+                <div class="doc-details desktop">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--004.jpg" alt="">
+                    <h5 class="name">Charlie Moon</h5>
+                    <ul>
+                        <li>Cardiac Surgeon</li>
+                        <li>MBBS, MD, FRCP, MRCP, Fellowship</li>
+                        <li>New Delhi, India</li>
+                    </ul>
+                </div>
+                <div class="doc-details mob-tab">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--003.jpg" alt="">
+                    <h5 class="name">Charlie Moon</h5>
+                    <ul>
+                        <li>Plastic Surgeon</li>
+                        <li>Department of Plastic and Reconstructive Surgery</li>
+                        <li>Dubai</li>
+                    </ul>
+                </div>
+                <div class="doc-details desktop">
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--005.jpg" alt="">
                     <h5 class="name">Charlie Moon</h5>
                     <ul>
-                        <li>Cardiac Surgeon</li>
-                        <li>MBBS, MD,FRCP, MRCP</li>
-                        <li>New Delhi</li>
-                    </ul>
-                </div>
-                <div class="doc-details">
-                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--003.jpg" alt="">
-                    <h5 class="name">Rose Moon</h5>
-                    <ul>
-                        <li>Plastic </li>
-                        <li>Department of Plastic and Reconstructive Surgery</li>
-                        <li>Dubai</li>
+                        <li>Cardiac Surgeon</li>
+                        <li>MBBS, MD, FRCP, MRCP, Fellowship</li>
+                        <li>New Delhi, India</li>
                     </ul>
                 </div>
             </div>
@@ -150,7 +187,7 @@
             </div>
         </section>
         <section class="container4">
-            <h3 >Featured Medical Treatment</h3>
+            <h2 >Featured Medical Treatment</h2>
             <div class="mob-tab">
                 <p >
                     Join the thousands of others who have exercised their rights to quality healthcare at a price you can afford.
@@ -160,8 +197,7 @@
                 <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
                 </p>
-            </div>
-            
+            </div>            
             <div class="treatment-grid">
                 <div class="treatments t1">
                     <div class="background"></div>
@@ -262,7 +298,7 @@
             </div>
         </section>
         <section class="container6">
-            <h2 class="cont6-1">Need Help ?</h2>
+            <h2 class="cont6-1">Need Help?</h2>
             <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
             <div class="cont6-3">
                 <button class="secondary ">Submit your enquiry</button>
